# timeindex-prototype

./: .gitignore  README.md  README.txt  TODO.txt  agent.md  change.txt  pyproject.toml
benchmarks/: baselines.py  metrics.py  plots.py  test_baselines.py  test_metrics.py
benchmarks/ibm_aml/: README.md  ablation_configs.py  adapter.py  configs.py  deepseek_agent.py  evidence.py  evidence_richness.py  fake_agent.py  profile_dataset.py  run_ablations.py  run_deepseek_agent.py  run_distance_benchmark.py  run_fake_agent.py  run_sqlite_ablation_compare.py  run_sqlite_deepseek_sample.py  run_sqlite_realcases.py  run_timeindex.py  run_two_agent.py  schema.py  test_adapter.py  test_deepseek_agent.py  test_deepseek_sample.py  test_distance_benchmark.py  test_evidence.py  test_evidence_richness.py  test_fake_agent.py  test_realcases.py  test_runner.py  test_two_agent.py  two_agent.py
benchmarks/lanl/: README.md  __init__.py  adapter.py  evidence.py  profile_dataset.py  run_deepseek_sample.py  run_sqlite_ablation_compare.py  schema.py  (+7 more)
scripts/: build_full_ibm_index.py  build_lanl_timeindex_sqlite.py  build_streaming_timeindex_sqlite.py  export_timeindex_sqlite.py  run_ibm_aml.sh  watch_progress_milestones.py
tests/: test_construction.py  test_extractors.py  test_imports.py  test_retrieval.py  test_scoring.py  test_sqlite_backend.py  test_stores.py  test_stubs.py  test_synthetic.py
timeindex/: __init__.py  candidate_index.py  config.py  construction.py  evaluation.py  event.py  extractors.py  interfaces.py  retrieval.py  scoring.py  sqlite_backend.py  stores.py  synthetic.py
