[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeindex"
version = "0.1.0"
description = "Prototype skeleton for the TimeIndex temporal retrieval pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "wusai80" }
]
dependencies = [
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["timeindex", "timeindex.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
